@@ -13,6 +13,8 @@
 
   .. autofunction:: model_path
 
+  .. autofunction:: traversal_path(path)
+
 .. note:: A function named ``model_url`` used to be present in this
    module.  It was moved to :ref:`url_module` in version 0.6.1.
 
